k8s/infrastructure/auth/lldap/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lldap
  template:
    metadata:
      namespace: lldap
      labels:
        app.kubernetes.io/name: lldap
    spec:
      serviceAccountName: lldap
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: lldap
          # Dockerfile: https://github.com/lldap/lldap/blob/main/Dockerfile
          image: docker.io/lldap/lldap:2026-02-27-alpine-rootless  # renovate: docker=ghcr.io/lldap/lldap
          livenessProbe:
            exec: {command: [/app/lldap, healthcheck]}
            initialDelaySeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 128Mi}
            limits: {memory: 128Mi}
          ports:
            - {name: ldap, containerPort: 3890}
            - {name: ldaps, containerPort: 6360}
            - {name: http, containerPort: 17170}
          volumeMounts:
            # - {name: tmp-volume, mountPath: /tmp}
            - {name: lldap-config, mountPath: /data/lldap_config.toml, subPath: lldap_config.toml, readOnly: true}
            - {name: cert-volume, mountPath: /key.ldap-karlsen-fr.pem, subPath: tls.key, readOnly: true}
            - {name: cert-volume, mountPath: /cert.ldap-karlsen-fr.pem, subPath: tls.crt, readOnly: true}
      volumes:
        # - {name: tmp-volume, emptyDir: {}}
        - {name: lldap-config, configMap: {name: lldap-config}}
        - {name: cert-volume, secret: {secretName: ldap-karlsen-fr-certificate}}
