k8s/infrastructure/auth/lldap/Service.ldap.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ldap
  namespace: lldap
spec:
  type: ClusterIP
  ports:
    - name: ldap
      protocol: TCP
      port: 389
      targetPort: ldap

    - name: ldaps
      protocol: TCP
      port: 636
      targetPort: ldaps
