k8s/infrastructure/auth/lldap/Service.web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lldap-web
  namespace: lldap
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 17170
