k8s/infrastructure/auth/lldap/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lldap
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http

    - name: ldap
      protocol: TCP
      port: 389
      targetPort: ldap
