k8s/infrastructure/auth/lldap/TCPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: ldap
  namespace: lldap
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: ldap}
    # - {namespace: gateway, name: external, sectionName: ldap}
  rules:
    - backendRefs: [{name: ldap, kind: Service, port: 389}]
